--- a/architecture/pubspec.yaml
+++ b/architecture/pubspec.yaml
@@ -29,9 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  architecture_business_logic:
-    path: packages/architecture_business_logic
   provider: ^6.0.2
+  freezed: ^1.1.1
+  get_it: ^7.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,6 +40,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  dart_code_metrics: ^4.10.1
+  build_runner: ^2.1.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
